--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "jwt-decode": "^3.1.2",
     "lazysizes": "^5.3.2",
     "lodash": "^4.17.21",
-    "notistack": "^1.0.6-next.3",
+    "notistack": "^2.0.2",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
