--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -41,7 +41,6 @@ jobs:
         env:
           FAST_REFRESH: false
           REACT_APP_URL_API: ${{ secrets.DEV_URL_ENDPOINT }}
-          REACT_APP_PAYPAL_ID: ${{ secrets.DEV_PAYPAL_ID }}
           REACT_APP_FIREBASE_API_KEY: ${{ secrets.DEV_FIREBASE_API_KEY }}
           REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.DEV_FIREBASE_AUTH_DOMAIN }}
           REACT_APP_FIREBASE_DATABASE_URL: ${{ secrets.DEV_FIREBASE_DATABASE_URL }}
@@ -50,6 +49,9 @@ jobs:
           REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.DEV_FIREBASE_MESSAGING_SENDER_ID }}
           REACT_APP_FIREBASE_APPID: ${{ secrets.DEV_FIREBASE_APPID }}
           REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.DEV_FIREBASE_MEASUREMENT_ID }}
+          REACT_APP_GA_MEASUREMENT_ID: ${{ secrets.DEV_GA_MEASUREMENT_ID }}
+          REACT_APP_HOTJAR: ${{ secrets.DEV_GA_MEASUREMENT_ID }}
+          REACT_APP_PAYPAL_ID: ${{ secrets.DEV_PAYPAL_ID }}
 
       - name: Archive Production Artifact
         uses: actions/upload-artifact@main
@@ -72,10 +74,24 @@ jobs:
           name: build
           path: .docker/build
 
-      - name: Deploy to Cloud Run
-        id: deploy
-        uses: google-github-actions/deploy-cloudrun@main
+      - uses: google-github-actions/setup-gcloud@master
         with:
-          service: ${{ env.SERVICE_NAME }}
-          image: gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}
-          credentials: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Authorize Docker push
+        run: gcloud auth configure-docker
+
+      - name: Build and Push Container
+        run: |-
+          docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} .
+          docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }}
+
+      - name: Deploy to Cloud Run
+        run: |-
+          gcloud run deploy ${{ env.SERVICE }} \
+            --region ${{ env.REGION }} \
+            --image gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} \
+            --platform "managed" \
+            --quiet
