--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -72,7 +72,7 @@ jobs:
         uses: actions/download-artifact@main
         with:
           name: build
-          path: .docker/build
+          path: build
 
       - uses: google-github-actions/setup-gcloud@master
         with:
@@ -87,7 +87,6 @@ jobs:
         run: |-
           docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} .
           docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }}
-        working-directory: .docker
 
       - name: Deploy to Cloud Run
         run: |-
