add conditions to dev

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 # https://github.com/facebook/create-react-app/issues/9984
 FAST_REFRESH=false
 
+# THIS ENV IS PRODUCTION
+REACT_APP_PROD=true
+
 # APIS
 REACT_APP_URL_API=
 
