--- a/.github/workflows/gcr-deploy-production.yml
+++ b/.github/workflows/gcr-deploy-production.yml
@@ -1,4 +1,4 @@
-name: Google Cloud Run Deploy
+name: Google Cloud Run Deploy Production
 # https://github.com/google-github-actions/setup-gcloud
 on:
   push:
@@ -55,6 +55,7 @@ jobs:
           REACT_APP_GA_MEASUREMENT_ID: ${{ secrets.GA_MEASUREMENT_ID }}
           REACT_APP_HOTJAR: ${{ secrets.HOTJAR }}
           REACT_APP_PAYPAL_ID: ${{ secrets.PAYPAL_ID }}
+          REACT_APP_PROD: true
 
       - name: Archive Production Artifact
         uses: actions/upload-artifact@main
