add profile with raffles, refactory components of rifopis

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ server {
 
 server {
      listen       $PORT;
-     server_name  *.rifopis.cl;
+     server_name  rifopis.cl *.rifopis.cl;
 
      location / {
          root   /usr/share/nginx/html;
