--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 FAST_REFRESH=false
 
 # THIS ENV IS PRODUCTION
-REACT_APP_PROD=true
+REACT_APP_PROD=
 
 # APIS
 REACT_APP_URL_API=
@@ -20,6 +20,9 @@ REACT_APP_FIREBASE_MEASUREMENT_ID=
 
 # GOOGLE ANALYTICS
 REACT_APP_GA_MEASUREMENT_ID=
+
+# FACEBOOK PIXEL
+REACT_APP_FACEBOOK_PIXEL=
 
 # HOTJAR
 REACT_APP_HOTJAR=
