--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -34,8 +34,9 @@ jobs:
           key: nodeModules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             nodeModules-
+
       - name: Install dependencies
-        run: npm ci
+        run: npm install
         env:
           CI: true
 
