--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ REACT_APP_FIREBASE_MEASUREMENT_ID=
 # GOOGLE ANALYTICS
 REACT_APP_GA_MEASUREMENT_ID=
 
+# FACEBOOK PIXEL
+REACT_APP_FACEBOOK_PIXEL=
+
 # HOTJAR
 REACT_APP_HOTJAR=
 
