--- a/.github/workflows/gcr-deploy-production.yml
+++ b/.github/workflows/gcr-deploy-production.yml
@@ -52,6 +52,7 @@ jobs:
           REACT_APP_GA_MEASUREMENT_ID: ${{ secrets.GA_MEASUREMENT_ID }}
           REACT_APP_HOTJAR: ${{ secrets.HOTJAR }}
           REACT_APP_PAYPAL_ID: ${{ secrets.PAYPAL_ID }}
+          REACT_APP_FACEBOOK_PIXEL: ${{ secrets.FACEBOOK_PIXEL }}
           REACT_APP_PROD: true
 
       - name: Archive Production Artifact
