--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "lazysizes": "^5.3.2",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "0.11.3",
+    "moment": "^2.29.1",
     "notistack": "^2.0.2",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
