--- a/.github/workflows/gcr-deploy-production.yml
+++ b/.github/workflows/gcr-deploy-production.yml
@@ -42,6 +42,7 @@ jobs:
           FAST_REFRESH: false
           REACT_APP_PROD: true
           REACT_APP_URL_API: ${{ secrets.URL_ENDPOINT }}
+          REACT_APP_URL_SHOP: ${{ secrets.URL_SHOP }}
           REACT_APP_FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
           REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
           REACT_APP_FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
