--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -45,6 +45,7 @@ jobs:
         env:
           FAST_REFRESH: false
           REACT_APP_URL_API: ${{ secrets.DEV_URL_ENDPOINT }}
+          REACT_APP_URL_SHOP: ${{ secrets.DEV_URL_SHOP }}
           REACT_APP_FIREBASE_API_KEY: ${{ secrets.DEV_FIREBASE_API_KEY }}
           REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.DEV_FIREBASE_AUTH_DOMAIN }}
           REACT_APP_FIREBASE_DATABASE_URL: ${{ secrets.DEV_FIREBASE_DATABASE_URL }}
